@startuml
hide circle
skinparam classAttributeIconSize 0

'class GoldenCompass {
'    + run() : void
'}



abstract class Command {
    - <u>FLAG_MISSING_MESSAGE : String
    + Command()
    + Command(Parser)
    + execute() : void
    # getCommandDescription() : String {abstract}
    # getFlagDescription() : String {abstract}
    # printHelp() : void
}

class UpcomingCommand {
    + UpcomingCommand(parser : Parser, interviewList : InterviewList)
    + execute() : void
    # getCommandDescription() : String
    # getFlagDescription() : String
}

class InterviewList {
    + getInterviews() : List<Interview>
}

class Interview {
    # dateTime : LocalDateTime
    + Interview(internship : Internship, date : LocalDateTime)
    + getDate() : void
    + setDate() : void
    + toString() : String
    + getInternship() : Internship
}

class Internship {
    # title : String
    # companyName : String
    # hasApplied : boolean
    + Internship(title : String, companyName : String)
}

enum ApplicationStatus <<enumeration>> {
    PENDING
    OFFER
    REJECTED
}

class Ui {
    ~ in : Scanner
    + greet() : void
    + print(s : String) : void
    + print(strings : String...) : void
    + read() : String
}

class Parser {
    - <u>FLAGSET : Set<String>
    - flagToParamMap : Map<String, List<String>>
    + parse(userInput : String) : void
    + getCommand() : String
    + getFlagToParamMap() : Map<String, List<String>>
    + getParamsOf(flag : String) : List<String>
    + isFlagExist(flag : String) : boolean
}

'GoldenCompass --> "1" Executor
'GoldenCompass --> "1" InterviewList
'GoldenCompass --> "1" Ui
'GoldenCompass --> "1" Parser

Interview --> "1" Internship

Internship --> "1" Interview
Internship --> "1" ApplicationStatus


UpcomingCommand --|> Command

UpcomingCommand --> "1" InterviewList : filters according to parameter N
InterviewList o--> "*" Interview : contains a list of

Command --> "1" Ui : print to output
Command --> "1" Parser : retrieves parameter N, if any

@enduml